--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <div class="col-md-6">
                                 <div class="content-wrap">
                                     <p class="lead">
-                                        A team-oriented and responsible person considered skilled in the field of the game and IT. Sharp, passionate, and willing to learn new skills i.e., Game, AI, Metaverse, Network Infrastructure, etc. Pursuing and looking forward to the opportunity in a leading company where learning skills get enhanced and used in work majorly.
+                                        Versatile and innovative professional with a dual expertise in game development and IT engineering. Adept at creating engaging and immersive gaming experiences, I bring a creative approach to game design and development, combined with strong technical skills. With a background in IT engineering, I possess a deep understanding of network infrastructure, software applications, and troubleshooting. I thrive in dynamic environments, adapting quickly to emerging technologies and industry trends. Passionate about harnessing the power of technology, I am committed to delivering high-quality gaming solutions and IT services. Eager to contribute my skills and expertise to a forward-thinking organization, driving innovation and achieving impactful results in both the gaming and IT sectors.
                                     </p>
 
                                     <div class="spacer30"></div>
@@ -382,6 +382,15 @@
                                                     </ul>
                                                     
                                                 </div>
+
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
+                                                <div class="spacer30"></div>
                                             </div>
 
                                             <div class="tab_single_content">
@@ -404,8 +413,8 @@
                                                 </div>
                                                 <div class="exp-box">
                                                     <h5>Nov 2019 – June 2020</h5>
-                                                    <h4>IT Engineer</h4>
-                                                    <h6>Vital International, Pakistan</h6>
+                                                    <h4>IT Support Engineer</h4>
+                                                    <h6>Metro Network, Pakistan</h6>
                                                     <div class="spacer10"></div>
                                                     <ul>
                                                         <li>Provided 1st line technical support, efficiently addressing support queries via ticketing tool, phone or email.</li>
@@ -428,12 +437,6 @@
                                                         <li>Worked on advanced security integration modules, including Black/White Listing, Face Detection and Recognition, Video Structuring, and Motion Detection, contributing to improved surveillance and threat detection.</li>
                                                     </ul>
                                                 </div>
-                                    <div class="spacer30"></div>
-                                    <div class="spacer30"></div>
-                                    <div class="spacer30"></div>
-                                    <div class="spacer30"></div>
-                                    <div class="spacer30"></div>
-                                    <div class="spacer30"></div>
                                             </div>
                                             
                                             <div class="tab_single_content">
